@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2006 Cisco Systems, Inc.  All rights reserved.
+# Copyright (c) 2006-2007 Cisco Systems, Inc.  All rights reserved.
 #
 
 # Template MTT configuration file for Open MPI core testers.  The
@@ -187,11 +187,27 @@ module = OMPI
 #======================================================================
 
 [MPI Details: Open MPI]
-exec = mpirun @hosts@ -np &test_np() --prefix &test_prefix() &test_executable() &test_argv()
+exec = mpirun @hosts@ -np &test_np() @mca@ --prefix &test_prefix() &test_executable() &test_argv()
 
 # Yes, all these quotes are necessary.  Don't mess with them!
 hosts = &if(&have_hostfile(), "&join("--hostfile ", "&hostfile()")", \
             "&if(&have_hostlist(), "&join("--host ", "&hostlist()")", "")")
+
+# Example showing conditional substitution based on the MPI get
+# section name (e.g., different versions of OMPI have different
+# capabilities / bugs).
+mca = &enumerate( \
+        "--mca btl sm,tcp,self@v1_1_mca_params@", \
+        "--mca btl tcp,self@v1_1_mca_params@")
+
+# OMPI v1.1 cannot handle heterogeneous numbers of TCP or OpenIB
+# interfaces within a single job.  So restrict it to a finite number
+# that will be the same across all processes in the job (adjust for
+# your own site, of course -- this particular example is meaningless
+# if all nodes at your site have a homogeneous type and number of
+# network interfaces).
+v1_1_mca_params = &if(&eq("&mpi_get_name()", "ompi-nightly-v1.1"), \
+	" --mca btl_tcp_if_include eth0 --mca oob_tcp_if_include eth0 --mca btl_openib_max_btls 1", "")
 
 #----------------------------------------------------------------------
 # WARNING: THIS DEFAULT after_each_exec STEP IS PRONE TO FAILURE!
